# WhisperType

./: .gitignore  Design.md  README.md  app.py  pyproject.toml  requirements.txt  run.py
speech_to_text/: __init__.py  __main__.py  app.py  hotkey_manager.py  settings_manager.py  transcription_service.py  tray_icon.py  voice_capture.py
speech_to_text_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
